--- a/BIGFISH_БД/StatisticPage.xaml
+++ b/BIGFISH_БД/StatisticPage.xaml
@@ -4,11 +4,203 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BIGFISH_БД" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="630" d:DesignWidth="1130">
-    <Grid>
-        <Button x:Name="BtnBack" Background="SlateBlue"  Height="60" Width="60" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Bottom"  Style="{StaticResource MaterialDesignFloatingActionButton}" Click="BtnBack_Click">
-            <materialDesign:PackIcon Kind="ArrowLeft" Width="25" Height="25" Foreground="White"/>
-        </Button>
-    </Grid>
+             d:DesignHeight="630" d:DesignWidth="1100">
+
+    <UserControl.Resources>
+        <Style x:Key="StatCardStyle" TargetType="Border">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="BorderBrush" Value="#FFE0E0E0"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="CornerRadius" Value="8"/>
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Padding" Value="15"/>
+            <Setter Property="Effect">
+                <Setter.Value>
+                    <DropShadowEffect BlurRadius="10" ShadowDepth="2" Color="#FFAAAAAA"/>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="ValueTextStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="SlateBlue"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="LabelTextStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Foreground" Value="#FF666666"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="TextWrapping" Value="Wrap"/>
+        </Style>
+    </UserControl.Resources>
+
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <StackPanel Margin="20">
+            <Border Style="{StaticResource StatCardStyle}">
+                <StackPanel>
+                    <TextBlock Text="Рабочая статистика" FontSize="28" FontWeight="Bold" Foreground="SlateBlue" HorizontalAlignment="Center" Margin="0,0,0,20"/>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10">
+                        <TextBlock Text="Период:" VerticalAlignment="Center" FontSize="16" Margin="0,0,10,0"/>
+                        <DatePicker x:Name="dpStartDate" materialDesign:HintAssist.Hint="Начальная дата" Width="150" Margin="0,0,20,0" FontSize="14"/>
+
+                        <DatePicker x:Name="dpEndDate" materialDesign:HintAssist.Hint="Конечная дата" Width="150" Margin="0,0,20,0" FontSize="14"/>
+
+                        <Button x:Name="btnLoadStatistics" Content="Показать статистику" Background="AliceBlue" Foreground="SlateBlue" BorderBrush="SlateBlue" FontSize="14" FontWeight="SemiBold" Padding="15,8">
+                            <Button.Style>
+                                <Style TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
+                                    <Setter Property="materialDesign:RippleAssist.Feedback" Value="SlateBlue"/>
+                                </Style>
+                            </Button.Style>
+                        </Button>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0">
+                    <Border Style="{StaticResource StatCardStyle}">
+                        <StackPanel>
+                            <TextBlock Text="Общая статистика" FontSize="18" FontWeight="Bold" 
+                                       Foreground="SlateBlue" Margin="0,0,0,15"/>
+
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Border Grid.Row="0" Grid.Column="0" Margin="5">
+                                    <StackPanel>
+                                        <TextBlock x:Name="tbTotalLures" Text="0" Style="{StaticResource ValueTextStyle}"/>
+                                        <TextBlock Text="Всего приманок" Style="{StaticResource LabelTextStyle}"/>
+                                    </StackPanel>
+                                </Border>
+
+                                <Border Grid.Row="0" Grid.Column="1" Margin="5">
+                                    <StackPanel>
+                                        <TextBlock x:Name="tbTotalDefects" Text="0" Style="{StaticResource ValueTextStyle}"/>
+                                        <TextBlock Text="Всего брака" Style="{StaticResource LabelTextStyle}"/>
+                                    </StackPanel>
+                                </Border>
+
+                                <Border Grid.Row="0" Grid.Column="2" Margin="5">
+                                    <StackPanel>
+                                        <TextBlock x:Name="tbDefectPercentage" Text="0%" Style="{StaticResource ValueTextStyle}"/>
+                                        <TextBlock Text="Процент брака" Style="{StaticResource LabelTextStyle}"/>
+                                    </StackPanel>
+                                </Border>
+                                <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="5" Padding="10"
+                                        Background="AliceBlue" CornerRadius="6">
+                                    <StackPanel>
+                                        <TextBlock Text="Лучшая упаковщица" FontWeight="SemiBold" 
+                                                   Foreground="SlateBlue" HorizontalAlignment="Center"/>
+                                        <TextBlock x:Name="tbBestPacker" Text="-" 
+                                                   FontSize="16" FontWeight="Bold"
+                                                   HorizontalAlignment="Center" 
+                                                   Margin="0,5,0,0"/>
+                                        <TextBlock Text="Меньше всего штрафных пачек" 
+                                                   FontSize="12" Foreground="#FF666666"
+                                                   HorizontalAlignment="Center"/>
+                                    </StackPanel>
+                                </Border>
+
+                                <Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Margin="5" Padding="10" Background="AliceBlue" CornerRadius="6">
+                                    <StackPanel>
+                                        <TextBlock Text="Лучший литейщик" FontWeight="SemiBold" 
+                                                   Foreground="SlateBlue" HorizontalAlignment="Center"/>
+                                        <TextBlock x:Name="tbBestFoundry" Text="-" 
+                                                   FontSize="16" FontWeight="Bold"
+                                                   HorizontalAlignment="Center" 
+                                                   Margin="0,5,0,0"/>
+                                        <TextBlock Text="Меньше всего бракованных пачек" 
+                                                   FontSize="12" Foreground="#FF666666"
+                                                   HorizontalAlignment="Center"/>
+                                    </StackPanel>
+                                </Border>
+                            </Grid>
+                        </StackPanel>
+                    </Border>
+
+                    <Border Style="{StaticResource StatCardStyle}">
+                        <StackPanel>
+                            <TextBlock Text="Статистика по артикулам" FontSize="18" FontWeight="Bold" 
+                                       Foreground="SlateBlue" Margin="0,0,0,15"/>
+
+                            <Border Background="AliceBlue" CornerRadius="6" Padding="10" Margin="0,5">
+                                <StackPanel>
+                                    <TextBlock Text="Артикул с наибольшим процентом брака" 
+                                               FontWeight="SemiBold" Foreground="SlateBlue"
+                                               HorizontalAlignment="Center"/>
+                                    <TextBlock x:Name="tbWorstArticle" Text="-" 
+                                               FontSize="16" FontWeight="Bold"
+                                               HorizontalAlignment="Center" 
+                                               Margin="0,5,0,0"/>
+                                    <TextBlock x:Name="tbWorstArticlePercentage" Text="-" 
+                                               FontSize="14" Foreground="#FF666666"
+                                               HorizontalAlignment="Center"/>
+                                </StackPanel>
+                            </Border>
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1">
+                    <Border Style="{StaticResource StatCardStyle}" Height="400">
+                        <StackPanel>
+                            <TextBlock Text="Соотношение брака" FontSize="18" FontWeight="Bold" 
+                                       Foreground="SlateBlue" Margin="0,0,0,15"
+                                       HorizontalAlignment="Center"/>
+
+                            <lvc:PieChart x:Name="DefectChart" 
+                                         Series="{Binding SeriesCollection}"
+                                         LegendLocation="Bottom"
+                                         InnerRadius="100"
+                                         Hoverable="True"
+                                         DataTooltip="{x:Null}"
+                                         Height="300">
+                                <lvc:PieChart.ChartLegend>
+                                    <lvc:DefaultLegend BulletSize="15" FontSize="12"/>
+                                </lvc:PieChart.ChartLegend>
+                            </lvc:PieChart>
+
+                            <TextBlock x:Name="tbChartNote" Text="Выберите период для отображения статистики" 
+                                       FontSize="12" FontStyle="Italic" Foreground="#FF666666"
+                                       HorizontalAlignment="Center" Margin="0,10,0,0"/>
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+            </Grid>
+
+
+            <Border x:Name="loadingMessage" Visibility="Collapsed" 
+                    Style="{StaticResource StatCardStyle}" 
+                    Background="AliceBlue">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <materialDesign:PackIcon Kind="Refresh" Width="40" Height="40" 
+                                            Foreground="SlateBlue" 
+                                            HorizontalAlignment="Center"/>
+                    <TextBlock Text="Загрузка статистики..." 
+                               FontSize="16" FontWeight="SemiBold"
+                               Foreground="SlateBlue" 
+                               HorizontalAlignment="Center"
+                               Margin="0,10,0,0"/>
+                </StackPanel>
+            </Border>
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
